<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.learnlib</groupId>
    <artifactId>ralib</artifactId>
    <version>0.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>ralib</name>
    <url>http://maven.apache.org</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <!-- Dependency versions appear alphabetically below -->
        <commons-lang.version>3.13.0</commons-lang.version>
        <guava.version>32.1.2-jre</guava.version>
        <jakarta-xml.version>4.0.1</jakarta-xml.version>
        <jaxb-impl.version>4.0.3</jaxb-impl.version>
        <jconstraints.version>0.9.9</jconstraints.version>
        <learnlib.version>0.16.0</learnlib.version>
    </properties>

    <build>
        <plugins>
            <!-- Dependency analysis -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>analyze-only</id>
                        <goals>
                            <goal>analyze-only</goal>
                        </goals>
                        <configuration>
                            <failOnWarning>true</failOnWarning>
                            <ignoreUnusedRuntime>true</ignoreUnusedRuntime>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Format the source code -->
            <plugin>
	        <groupId>com.diffplug.spotless</groupId>
	        <artifactId>spotless-maven-plugin</artifactId>
		<version>2.40.0</version>
		<configuration>
		    <formats>
                        <format>
			    <includes>
                                <include>.xml</include>
			    </includes>
			    <endWithNewline />
			    <trimTrailingWhitespace />
			</format>
		    </formats>
		    <java>
		        <endWithNewline />
                        <formatAnnotations />
			<importOrder>
			    <order>java|jakarta,com,org,de|gov|net</order>
			</importOrder>
                        <!--<indent>
                            <spaces>true</spaces>
                            <spacesPerTab>4</spacesPerTab>
                        </indent>-->
			<!--<palantirJavaFormat>
			    <version>2.27.0</version>
			</palantirJavaFormat>-->
			<removeUnusedImports />
                        <trimTrailingWhitespace />
		    </java>
		</configuration>
		<executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
	    </plugin>

            <!-- Make a jar archive -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>de.learnlib.ralib.Main</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <!-- learnlib -->
            <dependency>
                <groupId>de.learnlib</groupId>
                <artifactId>learnlib-parent</artifactId>
                <version>${learnlib.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- jakarta-xml api -->
            <dependency>
                <groupId>jakarta.xml.bind</groupId>
                <artifactId>jakarta.xml.bind-api</artifactId>
                <version>${jakarta-xml.version}</version>
            </dependency>
            <!-- jaxb implementation -->
            <dependency>
                <groupId>com.sun.xml.bind</groupId>
                <artifactId>jaxb-impl</artifactId>
                <version>${jaxb-impl.version}</version>
	        <scope>runtime</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>net.automatalib</groupId>
            <artifactId>automata-api</artifactId>
        </dependency>
        <dependency>
            <groupId>net.automatalib</groupId>
            <artifactId>automata-commons-util</artifactId>
        </dependency>
        <dependency>
            <groupId>net.automatalib</groupId>
            <artifactId>automata-core</artifactId>
        </dependency>
        <dependency>
            <groupId>de.learnlib</groupId>
            <artifactId>learnlib-api</artifactId>
        </dependency>
        <dependency>
            <groupId>de.learnlib</groupId>
            <artifactId>learnlib-util</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang.version}</version>
        </dependency>
        <dependency>
            <groupId>tools.aqua</groupId>
            <artifactId>jconstraints-core</artifactId>
            <version>${jconstraints.version}</version>
        </dependency>
        <dependency>
            <groupId>tools.aqua</groupId>
            <artifactId>jconstraints-z3</artifactId>
            <version>${jconstraints.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
        </dependency>
        <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-impl</artifactId>
        </dependency>
    </dependencies>
</project>
